<resources>
    <string name="app_name">W!ZZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="katego">W!ZZ</string>
    <string name="title_activity_start">Complete registration...</string>
    <string name="title_activity_com_katego">ComKatego</string>
    <string name="element_text">Element</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="nav_katego">Categories</string>
    <string name="nav_favo">Favourites</string>
    <string name="nav_acc">Account</string>
    <string name="nav_abo">Subscribtions</string>
    <string name="nav_profile">Profile</string>
    <string-array name="icons">
        <item>@drawable/ic_clock_fast_black_18dp</item>
        <item>@drawable/ic_message_text_outline_black_18dp</item>
        <item>@drawable/ic_clock_black_18dp</item>
        <item>@drawable/ic_comment_question_outline_black_18dp</item>
        <item>@drawable/ic_account_black_18dp</item>
        <item>@drawable/ic_file_document_black_18dp</item>
        <item>@drawable/ic_sword_black_18dp</item>
        <item>@drawable/ic_comment_alert_outline_black_18dp</item>
        <item>@drawable/ic_beaker_outline_black_18dp</item>
        <item>@drawable/ic_gender_male_female_black_18dp</item>
        <item>@drawable/ic_book_black_18dp</item>
        <item>@drawable/ic_help_black_18dp</item>
        <item>@drawable/ic_emoticon_neutral_black_18dp</item>
        <item>@drawable/ic_comment_multiple_outline_black_18dp</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="dialog_login_title">I want to sign in with…</string>
    <string name="title_activity_acc">Profile</string>
    <string name="title_activity_main_jokes">Jokes</string>
    <string name="title_shortJokes">Short jokes</string>
    <string name="title_oneliner">One liner</string>
    <string name="writeWizzle">Your wizzle</string>
    <string name="login_done">Yay! Everything\'s Done!</string>
    <string name="action_search">Search</string>
    <string name="title_activity_login">Login</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="log_out_description">Logout</string>
    <string name="prof_table_wizzles">w!zzles</string>
    <string name="prof_table_abos">Subscriptions</string>
    <string name="prof_table_abo">Subscribers</string>
    <string name="editWizzle">Add Wizzle</string>
    <string name="add_joke">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_lightMode">Light Mode</string>
    <string name="menu_darkMode">Dark Mode</string>
    <string name="already_voted">Voted</string>
    <string name="error">Error!</string>
    <string name="error_devise">Error on loading motto</string>
    <string name="error_joke">Error on loading joke</string>
    <string name="thumb_up">Vote</string>
    <string name="favor">Favor</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="post_success">Successful</string>
    <string name="save_joke">Save  joke</string>
    <string name="save_to_clipboard">Copied to clipboard</string>
    <string name="undo">Undo</string>
    <string name="add_comment">Add comment</string>
    <string name="title_activity_example">LoginTest</string>
    <string name="devise">Describe yourself in one word!</string>
    <string name="finish">Finish</string>
    <string name="login_welcome">Sign yourself up so we can create an account for you!</string>
    <string name="login_with">Login with</string>
    <string name="devise_1">What\'s your favourite word?</string>
    <string name="devise_2">What\'s your favourite object?</string>
    <string name="devise_3">Describe yourself in one word</string>
    <string name="finish1">Everything\'s done!</string>
    <string name="havefun">Have fun!</string>
    <string name="one_thing">Just one thing left:</string>
    <string name="login_error">Cannot sing in</string>
    <string name="info_error">Error while fetching profile information</string>
    <string name="facebook_app_id" translatable="false">336558743221475</string>
    <string name="gcm_api_key" translatable="false">AIzaSyAJ7qcQlrAqBw1tO4c0SavaAAWl6UjPpNg</string>
    <string name="gcm_sender_id" translatable="false">1097890076140</string>
    <string name="send">Send</string>
    <string name="my_jokes">My Profile</string>
    <string name="abo_alpha">Subscribtions will be available in the beta…</string>
    <string name="joke_of">Joke from</string>
    <string name="share_via">Share via…</string>
    <string name="title_activity_report">Report</string>
    <string name="enter_reason">Reason</string>
    <string name="report_offensive">Offensive</string>
    <string name="report_sexual">Sexual</string>
    <string name="report_violent">Violent</string>
    <string name="report_spam">Spam</string>
    <string name="report_misuse">Misuse</string>
    <string name="report_other">Other...</string>
    <string name="reported">Reported</string>
    <string name="title_activity_new_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="scontinue">Continue</string>
    <string name="try_again">Try again</string>
    <string name="action_register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_repeat">Password (Repeat)</string>
    <string name="prompt_about_me">About me</string>
    <string name="error_username_6_letters">Username must contain at least 6 letters</string>
    <string name="error_password_6_letters">Password must contain at least 6 letters</string>
    <string name="error_password_not_matching">Passwords are not matching</string>
    <string name="import_image">Import profile picture with...</string>
    <string name="login_with_email">Log in with email</string>
    <string name="title_activity_main" translatable="false">Fab Dialog Morph Animation</string>
    <string name="transition_dialog" translatable="false">transition_dialog</string>
    <string name="add_wizzle">Add wizzle</string>
    <string name="favored">Favored</string>
    <string name="defavored">Removed from favorites</string>
    <string name="jokes">Jokes</string>
    <string name="about">About</string>
    <string name="following">Following</string>
    <string name="profile">Profile</string>
    <string name="apply">Apply</string>
    <string name="cover_placeholder" translatable="false">https://lh4.googleusercontent.com/-w2lE2xrVbIA/UZf22RVPOJI/AAAAAAAARFw/cP8P6UIrLHk/w1600-h900/default_cover_photo_5_google_plus.jpg</string>
    <string name="anonymous_name">Pseudonym</string>
    <string name="status">Status</string>
    <string name="real_name">Real name</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
</resources>