<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.repictures.wzz.DetailActivity">

    <item android:id="@+id/detaillist_thumb_up"
        android:title="@string/thumb_up"
        android:icon="@drawable/ic_thumb_up_white_24dp"
        android:orderInCategory="4"
        app:showAsAction="always"/>

    <item android:id="@+id/favor"
        android:title="@string/favor"
        android:icon="@drawable/ic_heart_white_24dp"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_variant_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/ic_flag_variant_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>

</menu>