<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_new_login"
    android:visibility="invisible"
    android:alpha="0"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="40dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailinput"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputlayout"
        android:alpha="0"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            android:layout_below="@+id/emailinput"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:transitionName="palette"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scontinue"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/inputlayout"
        android:layout_alignParentEnd="true"
        android:theme="@style/Theme.AppCompat.Light" />

    <ProgressBar android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_sign_in_button"
        android:layout_alignRight="@+id/email_sign_in_button"
        android:layout_alignEnd="@+id/email_sign_in_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailinput"
        android:visibility="gone"/>

</RelativeLayout>