<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_vname_edit_label"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="56dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:id="@+id/edit_vname_edit"
                android:layout_alignParentTop="true"
                android:hint="@string/name"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/gender_txt"
            android:layout_below="@+id/edit_vname_edit_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_gender_spinner"
            android:layout_below="@+id/gender_txt"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_status_edit_label"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/edit_gender_spinner">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_status_edit"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:hint="@string/status"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_about_edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_below="@+id/edit_status_edit_label"
            android:paddingBottom="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_about_edit"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:hint="@string/prompt_about_me"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
