<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/jokesdialog_framlayout"
    tools:context="de.repictures.wzz.AddJoke.AddJokeDialog">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dialog_margin"
            android:layout_marginStart="@dimen/dialog_margin"
            android:background="@drawable/dialog_background"
            android:transitionName="@string/transition_dialog"
            android:elevation="@dimen/dialog_elevation"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_wizzle"
                android:theme="@style/KategoTheme"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/textView9" />

            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_joke"
                android:theme="@style/KategoTheme"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true" />

            <Button
                android:theme="@style/KategoTheme"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center_horizontal"
                android:layout_alignTop="@+id/send"
                android:layout_toStartOf="@+id/send" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:background="@drawable/btn_background"
                android:text="@string/send"
                android:textColor="#fff"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_below="@+id/add_joke"
                android:layout_alignEnd="@+id/add_joke" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_alignEnd="@+id/add_joke"
                android:layout_alignStart="@+id/send"
                android:layout_alignTop="@+id/send"
                android:layout_alignBottom="@+id/send" />

        </RelativeLayout>
</ScrollView>
